@@ -33,7 +33,6 @@ WriteMakefile(
 		'File::Slurp' => 0,
 		'JSON::MaybeXS' => 0,
 		'Params::Get' => 0.04,
-		'YAML::XS' => 0,
 		# 'XML::Parser::Expat' => 0,	# Seems to be needed for Windows
 		# 'XML::LibXML' => 0,	# do.
 		# 'XML::Simple' => 0,
@@ -41,7 +40,9 @@ WriteMakefile(
 		'File::Spec' => 0,
 		'Hash::Merge'	=> 0,
 		'Hash::Flatten'	=> 0,
-		'JSON::Parse' => 0
+		'JSON::Parse' => 0,
+		'Params::Validate::Strict' => 0,
+		'YAML::XS' => 0
 	},
 	META_MERGE => {
 		'meta-spec' => { version => 2 },
