@@ -2,6 +2,7 @@ Revision history for Config::Abstraction - Merge and manage configuration data f
 
 0.34
 	Added bin/config-dump
+	If schema is passed in, validate the config file against it
 
 0.33	Thu Jul 17 08:19:41 EDT 2025
 	The config_path value wasn't being stashed properly
